--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
                         Читать
                         далее</button>
                     <div class="paper__image">
-                        <img src="./src/img/PictArt.jpg" alt="Логотип компании">
+                        <img src="./img/PictArt.jpg" alt="Логотип компании">
                     </div>
                 </section>
             </section>
